# axocoatl

./: .gitignore  BRAND.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LAUNCH_CHECKLIST.md  README.md  SECURITY.md  axocoatl.example.yaml  axocoatl.yaml  llms.txt
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  debug-pages.yml  docs-deploy.yml  marketing-deploy.yml  publish-missing-crates.yml  release.yml
axocoatl-cli/: Cargo.toml
axocoatl-cli/src/: main.rs
axocoatl-server/: Cargo.toml  build.rs
axocoatl-server/src/: auth.rs  lib.rs  middleware.rs  routes.rs
axocoatl-server/static/: axo-tap.js  index.html
benches/: actor_throughput.rs  isolation_startup.rs  routing_latency.rs  token_efficiency.rs
branding/: README.md  SERPENT-AXIOM.md  colors.json  launch-card.html  mcp-catalog.json
crates/axocoatl-a2a/: Cargo.toml
crates/axocoatl-a2a/src/: client.rs  error.rs  lib.rs  server.rs  types.rs
crates/axocoatl-actor/: Cargo.toml
crates/axocoatl-actor/src/: actor_impl.rs  behavior.rs  coordinator.rs  default_behavior.rs  error.rs  lib.rs  recall.rs  registry.rs  summarizer.rs
crates/axocoatl-config/: Cargo.toml
crates/axocoatl-config/src/: automation.rs  convert.rs  error.rs  lib.rs  secret.rs  types.rs
crates/axocoatl-coordination/: Cargo.toml
crates/axocoatl-coordination/src/: auction.rs  htn.rs  lattice.rs  lib.rs  pheromone.rs
crates/axocoatl-coordination/tests/: multi_agent.rs
crates/axocoatl-core/: Cargo.toml
crates/axocoatl-core/src/: agent.rs  error.rs  lib.rs  skill.rs  token.rs  types.rs
crates/axocoatl-daemon/: Cargo.toml
crates/axocoatl-daemon/src/: activation.rs  automation_executor.rs  automation_runs.rs  automation_store.rs  bootstrap.rs  error.rs  git.rs  interrupt.rs  ipc.rs  lib.rs  mcp_approval_hook.rs  proactive.rs  scheduler.rs  skill_tool.rs  stream.rs  supervision.rs  workflow.rs
crates/axocoatl-graph/: Cargo.toml
crates/axocoatl-graph/src/: error.rs  lib.rs  types.rs  validation.rs  workflow.rs
crates/axocoatl-isolation/: Cargo.toml
crates/axocoatl-isolation/src/: error.rs  firecracker.rs  lib.rs  oci_sandbox.rs  podman.rs  pty.rs  session_sandbox.rs  tier.rs  vsock.rs  wasmtime_sandbox.rs
crates/axocoatl-llm/: Cargo.toml
crates/axocoatl-llm-anthropic/: Cargo.toml
crates/axocoatl-llm-anthropic/src/: lib.rs
crates/axocoatl-llm-gemini/: Cargo.toml
crates/axocoatl-llm-gemini/src/: lib.rs
crates/axocoatl-llm-mistral/: Cargo.toml
crates/axocoatl-llm-mistral/src/: lib.rs
crates/axocoatl-llm-ollama/: Cargo.toml
crates/axocoatl-llm-ollama/src/: lib.rs
crates/axocoatl-llm-openai/: Cargo.toml
crates/axocoatl-llm-openai/src/: convert.rs  lib.rs
crates/axocoatl-llm-openai/tests/: vertical_integration.rs
crates/axocoatl-llm/src/: error.rs  extensions.rs  lib.rs  provider.rs  registry.rs  tools.rs
crates/axocoatl-mcp/: Cargo.toml
crates/axocoatl-mcp/src/: approval.rs  error.rs  lib.rs  permissions.rs  registry.rs  server.rs
crates/axocoatl-memory/: Cargo.toml
crates/axocoatl-memory/src/: chat.rs  checkpoint.rs  daily_log.rs  error.rs  extract.rs  files.rs  lib.rs  long_term.rs  neural.rs  semantic.rs  session.rs  transcript.rs
crates/axocoatl-service/: Cargo.toml
crates/axocoatl-service/src/: launchd.rs  lib.rs  systemd.rs
crates/axocoatl-session/: Cargo.toml
crates/axocoatl-session/src/: devcontainer.rs  lib.rs
crates/axocoatl-token/: Cargo.toml
crates/axocoatl-token/src/: budget.rs  compressor.rs  constants.rs  cost.rs  counter.rs  error.rs  format.rs  lib.rs  pipeline.rs
crates/axocoatl-token/tests/: proptest_budget.rs
crates/axocoatl-tools/: Cargo.toml
crates/axocoatl-tools/src/: builtin.rs  concurrent.rs  error.rs  executor.rs  fs_tools.rs  hook_registry.rs  hooks.rs  lib.rs  web_tools.rs
docs/: ARCHITECTURE.md  LOCAL_TESTING_GUIDE.md  TROUBLESHOOTING.md
examples/code-reviewer/: Cargo.toml  README.md  main.rs
examples/customer-support/: Cargo.toml  README.md  main.rs
examples/mcp-bridge/: Cargo.toml  README.md  main.rs
examples/research-assistant/: Cargo.toml  README.md  main.rs
launch/: README.md  hn.md  lobsters.md  reddit.md  twitter.md
scripts/: install.sh  setup-dev.sh
sites/docs/: astro.config.mjs  package-lock.json  prebuild.sh
sites/docs/src/content/docs/: getting-started.mdx  index.mdx
sites/docs/src/content/docs/api/: cli.mdx  http.mdx
sites/docs/src/content/docs/concepts/: agents.mdx  automations.mdx  checkpointing.mdx  coordinator.mdx  lattice.mdx  memory.mdx  protocols.mdx  sessions.mdx  skills.mdx
sites/docs/src/content/docs/guides/: architecture.md  examples-gallery.mdx  ollama-quickstart.md  providers.mdx  token-budgets.mdx  tool-approval.mdx  troubleshooting.md
sites/docs/src/styles/: overrides.css  tokens.css
sites/marketing/: 404.html  README.md  index.html  robots.txt  sitemap.xml
sites/marketing/_brand/: index.html
sites/marketing/changelog/: index.html
sites/marketing/components/: ax-automation-card.js  ax-cli-snippet.js  ax-comparison-row.js  ax-finder-window.js  ax-footer.js  ax-install-bar.js  ax-pillar.js  ax-scripted-lattice.js  ax-sessions-mock.js  ax-site-nav.js  ax-studio-mock.js  ax-theme-toggle.js
sites/marketing/concepts/: index.html
sites/marketing/install/: index.html
sites/marketing/integrations/openrouter/: index.html
sites/marketing/pricing/: index.html
sites/marketing/scripts/: sync-assets.sh
sites/marketing/showcase/: index.html
sites/marketing/styles/: base.css  finder.css  product-mocks.css  tokens.css
sites/marketing/why/: index.html
src/: lib.rs
tools/: colorize_sketch.py  imagegen.py  knockout_bg.py  recolor.py  seed_demo.sh  wordmark.py
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx
ui/src/components/: AgentNode.tsx  ModeToggle.tsx
ui/src/store/: graphStore.ts
