[package]
name = "axocoatl-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
description = "Command-line interface for the Axocoatl agentic AI framework"

[[bin]]
name = "axocoatl"
path = "src/main.rs"

[dependencies]
axocoatl-core = { version = "0.1.0", path = "../crates/axocoatl-core" }
axocoatl-config = { version = "0.1.0", path = "../crates/axocoatl-config" }
axocoatl-daemon = { version = "0.1.0", path = "../crates/axocoatl-daemon" }
axocoatl-actor = { version = "0.1.0", path = "../crates/axocoatl-actor" }
axocoatl-server = { version = "0.1.0", path = "../axocoatl-server" }
axocoatl-memory = { version = "0.1.0", path = "../crates/axocoatl-memory" }
axocoatl-service = { version = "0.1.0", path = "../crates/axocoatl-service" }
axocoatl-isolation = { version = "0.1.0", path = "../crates/axocoatl-isolation" }
axocoatl-mcp = { version = "0.1.0", path = "../crates/axocoatl-mcp" }
clap = { workspace = true }
rmcp = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
dialoguer = "0.11"
