[package]
name = "axocoatl-graph"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
description = "Workflow graph model for Axocoatl agent orchestration"

[lib]
name = "axocoatl_graph"
crate-type = ["rlib"]

[dependencies]
axocoatl-core = { version = "0.1.0", path = "../axocoatl-core" }
petgraph = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
