[package]
name = "axocoatl-isolation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
description = "Tiered isolation layer for Axocoatl tool execution (Wasmtime + youki OCI + Firecracker)"

[dependencies]
axocoatl-core = { version = "0.1.0", path = "../axocoatl-core" }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
portable-pty = "0.8"
bytes = "1"
# Firecracker — behind feature flag (requires Linux + KVM)
firepilot = { version = "1.2", optional = true }
# OCI container runtime (youki) — behind feature flag (requires Linux)
libcontainer = { version = "0.6", optional = true, default-features = false, features = ["v1", "v2"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile = "3.27"
wat = "1.245"

[features]
default = ["wasmtime-sandbox"]
wasmtime-sandbox = []
firecracker-isolation = ["dep:firepilot"]
firecracker-integration = ["firecracker-isolation"]
oci-isolation = ["dep:libcontainer"]
