[package]
name = "axocoatl-llm-openai"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
description = "OpenAI provider implementation for Axocoatl LLM abstraction"

[dependencies]
axocoatl-core = { version = "0.1.0", path = "../axocoatl-core" }
axocoatl-llm = { version = "0.1.0", path = "../axocoatl-llm" }
async-openai = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
async-stream = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
wiremock = { workspace = true }
axocoatl-config = { version = "0.1.0", path = "../axocoatl-config" }
axocoatl-token = { version = "0.1.0", path = "../axocoatl-token" }

[features]
default = []
llm-integration-tests = []
