[package]
name = "axocoatl-token"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
description = "Token counting, budget enforcement, and format-adaptive serialization for Axocoatl"

[dependencies]
axocoatl-core = { version = "0.1.0", path = "../axocoatl-core" }
tiktoken-rs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
